applications/operators/envoy-gateway/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: envoy-gateway-tracing
  namespace: observability
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: EnvoyProxy
      namespace: envoy-gateway-system
  to:
    - group: ""
      kind: Service
