applications/operators/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-envoy
  namespace: gateway-system
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.tibor.sh"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.tibor.sh"
      tls:
        mode: Terminate
        certificateRefs:
          - name: tibor-sh-wildcard-tls
            kind: Secret
            group: ""
      allowedRoutes:
        namespaces:
          from: All
    - name: preview-https
      protocol: HTTPS
      port: 443
      hostname: "*.preview.tibor.sh"
      tls:
        mode: Terminate
        certificateRefs:
          - name: preview-tibor-sh-wildcard-tls
            kind: Secret
            group: ""
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              platform.tibor.sh/type: preview
