applications/operators/envoy-gateway/https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect-envoy
  namespace: gateway-system
spec:
  parentRefs:
    - name: public-envoy
      namespace: gateway-system
      sectionName: http
  hostnames:
    - "*.tibor.sh"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
